--- a/index_2.html
+++ b/index_2.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <h2>test git with vscode</h2>
-    <p>sửa đôi lần 1</p>
-    <h2>sửa đổi lần 2</h2>
+    <h2>file mới</h2>
   </body>
 </html>
